<?xml version="1.0" encoding="utf-8"?>
<resources>

    
    
    <string name="app_name">驾校通</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="accountInfo">账号信息</string>
    <string name="login">登录</string>
    <string name="personInfo">个人信息</string>
    <string name="questionBank">题库设置</string>
    <string name="myOrder">我的订单</string>
    <string name="myStore">我的收藏</string>
    <string name="message">消息</string>
    <string name="setting">设置</string>
    <string name="appraiseUs">评价</string>
    <string name="contactUs">联系我们</string>
    <string name="aboutUs">关于我们</string>
    <string name="theInfoManageSystemOfSchool">驾校信息管理系统</string>
    <string name="loginSystem">登录系统</string>
    <string name="freeTime">空闲时间</string>
    <string name="learnPlan">学车进度</string>
    <string name="orderList">预约记录</string>
    <string name="examPlan">考试记录</string>
    <string name="errorExercise">错题汇总</string>
    <string name="remindExercise">练习提醒</string>
    <string name="friendManage">好友管理</string>
    <string name="myTopic">我的话题</string>
    <string name="news">我的消息</string>
    <string name="logOff">注销登录</string>
    <string name="userInfo">用户信息</string>
    <string name="studentInfo">学员档案</string>
    <string name="color_black">#000000</string>
    <string name="color_green">#00CC00</string>
    <string name="location_example">武汉—洪山区—珞瑜东路1037号</string>
    <string name="recommend_resp">特别推荐</string>
    <string name="order_learn">预约学车</string>
    <string name="queue_wait">排队等候</string>
    <string name="app_introduce">软件介绍</string>
    <string name="function_info">功能详解</string>
    <string name="guarantee_service">保障服务</string>
    <string name="feedback_pass">反馈通道</string>
    <string name="about_us_call">关于我们</string>
    <string name="students_can_choice_coach_by_yourself">学员可自选教练，一对一辅导</string>
    <string name="place_choice">地点选择</string>
    <string name="teach_type">教学类型</string>
    <string name="near_place">距离最近</string>
    <string name="this_is_picture">这是图片</string>

</resources>
